--- a/QCHTTP/Info.plist
+++ b/QCHTTP/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(QCHTTP_BUILD_NUMBER)</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2016 Boinx Software Ltd. All rights reserved.</string>
 	<key>QCPlugInClasses</key>
